<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_toStartOf="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_word"
        android:inputType="textPersonName"
        android:visibility="visible"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/addButton"
        android:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:layout_marginBottom="22dp"
        android:onClick="toList"
        android:text="@string/listButton"
        android:visibility="visible" />

</RelativeLayout>